Time: 7 ms (49.96%), Space: 45.3 MB (53.41%) - LeetHub